grammar.js
        document: $ => repeat(
            choice(
                $.heading,
                $.strong_delimiting_modifier,
                $.non_structural,
            ),
        ),

        _word: $ => prec.right(repeat1($._character)),
        _whitespace: _ => token(/[\t                　]+/),

        paragraph_segment: $ => seq(
            choice(
                $._word,
                $.escape_sequence,
                seq(
                    optional(
                        seq(
                            $._word,
                            $.link_modifier,
                        ),
                    ),
                    prec.dynamic(1, $.attached_modifier),
                    optional(
                        seq(
                            $.link_modifier,
                            $._word,
                        ),
                    ),
                ),
            ),
            repeat(
                choice(
                    seq(
                        $._whitespace,
                        choice(
                            $._word,
                            $._whitespace,
                            $.escape_sequence,
                            prec.dynamic(1, $.attached_modifier),
                            $._attached_modifier_conflict,
                            seq(
                                optional(
                                    seq(
                                        $._word,
                                        $.link_modifier,
                                    ),
                                ),
                                prec.dynamic(1, $.attached_modifier),
                                optional(
                                    seq(
                                        $.link_modifier,
                                        $._word,
                                    ),
                                ),
                            ),
                        ),
                    ),
                    choice(
                        $._word,
                        $.escape_sequence,
                        $._attached_modifier_conflict,
                    ),
                ),
            ),
        ),

        paragraph: $ => prec.right(seq(
            $.paragraph_segment,
            repeat(
                seq(
                    newline,
                    $.paragraph_segment,
                ),
            ),
            newline_or_eof,
            // TODO: deal with https://github.com/nvim-neorg/norg-specs/issues/8
        )),

        unordered_list_item1: $ => nestable_detached_mod($, "unordered_list_item", "-", 1),
        unordered_list_item2: $ => nestable_detached_mod($, "unordered_list_item", "-", 2),
        unordered_list_item3: $ => nestable_detached_mod($, "unordered_list_item", "-", 3),
        unordered_list_item4: $ => nestable_detached_mod($, "unordered_list_item", "-", 4),
        unordered_list_item5: $ => nestable_detached_mod($, "unordered_list_item", "-", 5),
        unordered_list_item6: $ => nestable_detached_mod($, "unordered_list_item", "-", 6),

        ordered_list_item1: $ => nestable_detached_mod($, "ordered_list_item", "~", 1),
        ordered_list_item2: $ => nestable_detached_mod($, "ordered_list_item", "~", 2),
        ordered_list_item3: $ => nestable_detached_mod($, "ordered_list_item", "~", 3),
        ordered_list_item4: $ => nestable_detached_mod($, "ordered_list_item", "~", 4),
        ordered_list_item5: $ => nestable_detached_mod($, "ordered_list_item", "~", 5),
        ordered_list_item6: $ => nestable_detached_mod($, "ordered_list_item", "~", 6),

        list: $ => prec.right(
            repeat1(
                choice(
                    $.unordered_list_item1,
                    $.unordered_list_item2,
                    $.unordered_list_item3,
                    $.unordered_list_item4,
                    $.unordered_list_item5,
                    $.unordered_list_item6,
                    $.ordered_list_item1,
                    $.ordered_list_item2,
                    $.ordered_list_item3,
                    $.ordered_list_item4,
                    $.ordered_list_item5,
                    $.ordered_list_item6,
                ),
            ),
        ),

        _attached_modifier_conflict: $ => choice(
            $._bold_open,
            $._italic_open,
            $._strikethrough_open,
            $._underline_open,
            $._spoiler_open,
            $._superscript_open,
            $._subscript_open,
            $._inline_comment_open,
            $._inline_math_open,
            $._inline_macro_open,
        ),
