test/corpus/ordered_list.txt
================================================================================
Level 1 Ordered list
================================================================================
~ Ordered list content
spanning a paragraph

but not further
--------------------------------------------------------------------------------

(document
  (list
    (ordered_list_item1
      (prefix)
      (paragraph
        (paragraph_segment)
        (paragraph_segment))))
  (paragraph
    (paragraph_segment)))

================================================================================
Level 2 Ordered list
================================================================================
~~ Ordered list content
spanning a paragraph

but not further
--------------------------------------------------------------------------------

(document
  (list
    (ordered_list_item2
      (prefix)
      (paragraph
        (paragraph_segment)
        (paragraph_segment))))
  (paragraph
    (paragraph_segment)))

================================================================================
Level 3 Ordered list
================================================================================
~~~ Ordered list content
spanning a paragraph

but not further
--------------------------------------------------------------------------------

(document
  (list
    (ordered_list_item3
      (prefix)
      (paragraph
        (paragraph_segment)
        (paragraph_segment))))
  (paragraph
    (paragraph_segment)))

================================================================================
Level 4 Ordered list
================================================================================
~~~~ Ordered list content
spanning a paragraph

but not further
--------------------------------------------------------------------------------

(document
  (list
    (ordered_list_item4
      (prefix)
      (paragraph
        (paragraph_segment)
        (paragraph_segment))))
  (paragraph
    (paragraph_segment)))

================================================================================
Level 5 Ordered list
================================================================================
~~~~~ Ordered list content
spanning a paragraph

but not further
--------------------------------------------------------------------------------

(document
  (list
    (ordered_list_item5
      (prefix)
      (paragraph
        (paragraph_segment)
        (paragraph_segment))))
  (paragraph
    (paragraph_segment)))

================================================================================
Level 6 Ordered list
================================================================================
~~~~~~ Ordered list content
spanning a paragraph

but not further
--------------------------------------------------------------------------------

(document
  (list
    (ordered_list_item6
      (prefix)
      (paragraph
        (paragraph_segment)
        (paragraph_segment))))
  (paragraph
    (paragraph_segment)))

================================================================================
Nested Ordered list
================================================================================
~~ item 2
~~~ item 3
~~~~ item 4
~~ item 2
~ item 1
~~~~~~ item 6
--------------------------------------------------------------------------------

(document
  (list
    (ordered_list_item2
      (prefix)
      (paragraph
        (paragraph_segment))
      (ordered_list_item3
        (prefix)
        (paragraph
          (paragraph_segment))
        (ordered_list_item4
          (prefix)
          (paragraph
            (paragraph_segment)))))
    (ordered_list_item2
      (prefix)
      (paragraph
        (paragraph_segment)))
    (ordered_list_item1
      (prefix)
      (paragraph
        (paragraph_segment))
      (ordered_list_item6
        (prefix)
        (paragraph
          (paragraph_segment))))))

================================================================================
Ordered list Starting With Level Greater than 1
================================================================================
~~~~~ Level 5 Ordered list
--------------------------------------------------------------------------------

(document
  (list
    (ordered_list_item5
      (prefix)
      (paragraph
        (paragraph_segment)))))
