test/corpus/paragraphs.txt
================================================================================
Single paragraph segment
================================================================================
this is a paragraph segment

--------------------------------------------------------------------------------

(document
  (paragraph
    (paragraph_segment)))

================================================================================
Paragraphs
================================================================================
this is a
big paragraph!

--------------------------------------------------------------------------------

(document
  (paragraph
    (paragraph_segment)
    (paragraph_segment)))

================================================================================
Many Paragraphs
================================================================================
this is a paragraph.
this is also part of the paragraph.

this is another paragraph.
so is this.

--------------------------------------------------------------------------------

(document
  (paragraph
    (paragraph_segment)
    (paragraph_segment))
  (paragraph
    (paragraph_segment)
    (paragraph_segment)))
