test/corpus/unordered_list.txt
================================================================================
Level 1 Unordered list
================================================================================
- Unordered list content
spanning a paragraph

but not further
--------------------------------------------------------------------------------

(document
  (list
    (unordered_list_item1
      (prefix)
      (paragraph
        (paragraph_segment)
        (paragraph_segment))))
  (paragraph
    (paragraph_segment)))

================================================================================
Level 2 Unordered list
================================================================================
-- Unordered list content
spanning a paragraph

but not further
--------------------------------------------------------------------------------

(document
  (list
    (unordered_list_item2
      (prefix)
      (paragraph
        (paragraph_segment)
        (paragraph_segment))))
  (paragraph
    (paragraph_segment)))

================================================================================
Level 3 Unordered list
================================================================================
--- Unordered list content
spanning a paragraph

but not further
--------------------------------------------------------------------------------

(document
  (list
    (unordered_list_item3
      (prefix)
      (paragraph
        (paragraph_segment)
        (paragraph_segment))))
  (paragraph
    (paragraph_segment)))

================================================================================
Level 4 Unordered list
================================================================================
---- Unordered list content
spanning a paragraph

but not further
--------------------------------------------------------------------------------

(document
  (list
    (unordered_list_item4
      (prefix)
      (paragraph
        (paragraph_segment)
        (paragraph_segment))))
  (paragraph
    (paragraph_segment)))

================================================================================
Level 5 Unordered list
================================================================================
----- Unordered list content
spanning a paragraph

but not further
--------------------------------------------------------------------------------

(document
  (list
    (unordered_list_item5
      (prefix)
      (paragraph
        (paragraph_segment)
        (paragraph_segment))))
  (paragraph
    (paragraph_segment)))

================================================================================
Level 6 Unordered list
================================================================================
------ Unordered list content
spanning a paragraph

but not further
--------------------------------------------------------------------------------

(document
  (list
    (unordered_list_item6
      (prefix)
      (paragraph
        (paragraph_segment)
        (paragraph_segment))))
  (paragraph
    (paragraph_segment)))

================================================================================
Nested Unordered list
================================================================================
-- item 2
--- item 3
---- item 4
-- item 2
- item 1
------ item 6
--------------------------------------------------------------------------------

(document
  (list
    (unordered_list_item2
      (prefix)
      (paragraph
        (paragraph_segment))
      (unordered_list_item3
        (prefix)
        (paragraph
          (paragraph_segment))
        (unordered_list_item4
          (prefix)
          (paragraph
            (paragraph_segment)))))
    (unordered_list_item2
      (prefix)
      (paragraph
        (paragraph_segment)))
    (unordered_list_item1
      (prefix)
      (paragraph
        (paragraph_segment))
      (unordered_list_item6
        (prefix)
        (paragraph
          (paragraph_segment))))))

================================================================================
Unordered list Starting With Level Greater than 1
================================================================================
----- Level 5 Unordered list
--------------------------------------------------------------------------------

(document
  (list
    (unordered_list_item5
      (prefix)
      (paragraph
        (paragraph_segment)))))
